WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311358
AX: Presentational/hidden images shouldn't expose image overlay children
https://bugs.webkit.org/show_bug.cgi?id=311358
Summary
AX: Presentational/hidden images shouldn't expose image overlay children
Joshua Hoffman
Reported
2026-04-02 10:38:33 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Joshua Hoffman
Comment 1
2026-04-02 10:38:36 PDT
<
rdar://problem/159304061
>
Joshua Hoffman
Comment 2
2026-04-02 10:45:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61924
EWS
Comment 3
2026-04-02 17:40:18 PDT
Committed
310483@main
(20193b191530): <
https://commits.webkit.org/310483@main
> Reviewed commits have been landed. Closing PR #61924 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug