AX: Presentational/hidden images shouldn't expose image overlay children https://bugs.webkit.org/show_bug.cgi?id=311358 rdar://159304061

Reviewed by Tyler Wilcock.

An image with role="presentation" can have image overlay children (e.g., OCRed text). We
need to make sure that we don't expose those, or add them to the accessibility hierarchy
when they are descendants of an ignored image, as they are intrinsically tied.

Test: accessibility/image-overlay-elements-presentational.html
* LayoutTests/accessibility/image-overlay-elements-presentational-expected.txt: Added.
* LayoutTests/accessibility/image-overlay-elements-presentational.html: Added.
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::computeIsIgnored const):
(WebCore::AccessibilityRenderObject::isInsideIgnoredImageOverlay const):
(WebCore::AccessibilityRenderObject::imageOverlayElements):
* Source/WebCore/accessibility/AccessibilityRenderObject.h:

Canonical link: https://commits.webkit.org/310483@main